<resources>
    <string name="app_name">Mac</string>

    <string name="Copyright">Copyright@2015-2020 Czhi, Ywen</string>
    <string name="action_settings">设置</string>
    <string name="action_share">一键分享计算结果</string>
    <string name="version">版本</string>

    <string name="MacAddressStart">起始MAC地址: 0x</string>
    <string name="machineNum">机器数量</string>
    <string name="macNumPerMachine">MAC步长</string>
    <string name="MacAddressEnd">末端MAC地址: 0x</string>

    <string name="Pleaseinput">请输入...</string>

    <string name="Backspace">退格</string>
    <string name="Count">计算</string>
    <string name="Reset">重置</string>


    <string name="about">关于</string>
    <string name="exit">退出</string>

    <string name="allright">All Rights Reserved</string>
</resources>
