<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center_horizontal">



    <!--线性布局-垂直：共4行 -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/LinearLayout0"
        >
        <!--第1行 -->
        <RelativeLayout
            android:id="@+id/line1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:weightSum="1">
            <TextView
                android:id="@+id/macstart"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="10pt"
                android:text="@string/MacAddressStart"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/edit_text1"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/dr_edittext"
                android:textCursorDrawable="@null"
                android:cursorVisible="true"
                android:hint="@string/Pleaseinput" />

            <TextView
                android:id="@+id/zerox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@id/edit_text1"
                android:layout_centerVertical="true"
                android:textSize="10pt"
                android:text="0x"/>
        </RelativeLayout>
        <!--第2行 -->
        <!--用相对布局，可以让里面的控件，一个靠左，一个靠右
            而线性布局里面的控件要么只能全部靠左，要么只能全部靠右-->
        <RelativeLayout
            android:id="@+id/line2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp" >
            <TextView
                android:id="@+id/machineNum"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="10pt"
                android:text="@string/machineNum"/>
            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/dr_edittext"
                android:textCursorDrawable="@null"
                android:cursorVisible="true"
                android:hint="@string/Pleaseinput" />
        </RelativeLayout>

        <!--第3行 -->
        <RelativeLayout
            android:id="@+id/line3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp" >
            <TextView
                android:id="@+id/macNumPerMachine"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="10pt"
                android:text="@string/macNumPerMachine"/>
            <EditText
                android:id="@+id/edit_text3"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/dr_edittext"
                android:textCursorDrawable="@null"
                android:cursorVisible="true"
                android:hint="@string/Pleaseinput"/>
        </RelativeLayout>

        <!--第4行 -->
        <RelativeLayout
            android:id="@+id/line4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/MacAddressEnd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="10pt"
                android:text="@string/MacAddressEnd"  />

            <TextView
                android:id="@+id/textview_macEnd"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/contact_edit_edittext_normal"
                android:gravity="center_vertical"
                android:hint="" />
        </RelativeLayout >
    </LinearLayout>

    <!--键盘-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/gridlt"
        android:rowCount="4"
        android:columnCount="4"
        >
    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/gridlt"
        android:id="@+id/LinearLayout03" >
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:textSize="10pt"
            android:textColor="@android:color/black"
            android:text="@string/Backspace"
            android:onClick="backGrid" />
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/button_shape"
            android:textSize="10pt"
            android:textColor="@android:color/black"
            android:text="@string/Count"
            android:onClick="getResult" />
        <Button
            android:id="@+id/cleardata"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:textSize="10pt"
            android:textColor="@android:color/black"
            android:text="@string/Reset"
            android:onClick="clearData"/>
    </LinearLayout>

    <!--
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Copyright"/>
        -->
</RelativeLayout>